Trivial nitpickery
I am irrationally prejudiced against Collections.emptyMap().